--- a/views/profile.mustache
+++ b/views/profile.mustache
@@ -36,7 +36,7 @@
   	<div class="fs-inner-container content">
   		<div class="fs-content">
 
-  			<section class="search" style="min-height:800px">
+  			<section class="search" style="min-height:800px;background:#f9f9f9">
           <div class="user-profile-titlebar">
             <div class="user-profile-avatar">
               <img src="{{{profile.image}}}=s512-c" alt="Vertex 360">
