slack invite on home page

--- a/views/index.mustache
+++ b/views/index.mustache
@@ -215,8 +215,16 @@
           </tbody>
         </table>
       </p>
+
+      <img class="margin-top-40" style="border:1px solid #ededed" src="https://lh3.googleusercontent.com/3oGNMjlI_ZszITyp6HJ43MNMcNamsh8M0FPMAAhDUDVawawxllUkBUNBPLAQggvRuXrR0u7RJDuxb4C2BJynQE8M=s320" />
+      <h3 class="margin-top-20">Join our Slack Channel!</h3>
+      <p class="margin-top-0 margin-bottom-40">
+        Join our Slack channel to ask questions, stay up to date with new features, templates,
+        and learn more about Vetex 360!. To join, click <a style="color:red" target="_blank" href="https://join.slack.com/t/vertex360/shared_invite/enQtNTg4ODY2MzY3MTIyLTdlNzNjY2RmOGIyYjIxYzZkNmQ5ZDVhNWNhNWU0ZjJiY2U1Mjg2OWU4NjMzY2YwOGVlZjU2YjQ1MjMzNWI3NGM">HERE</a>.
+      </p>
+
       <%#showGetStarted%>
-      <a id="btn-get-started" href="#sign-in-dialog" style="border-radius:4px;width:100%;text-align:center;letter-spacing:3px" class="button with-icon popup-with-zoom-anim">GET STARTED</i></a>
+      <a id="btn-get-started" href="#sign-in-dialog" style="border-radius:4px;width:100%;text-align:center;letter-spacing:3px" class="button with-icon popup-with-zoom-anim">JOIN VERTEX 360</i></a>
       <%/showGetStarted%>
   	</div>
   </div>
