--- a/views/post.mustache
+++ b/views/post.mustache
@@ -17,45 +17,25 @@
 		<div class="col-lg-9 col-md-8 padding-right-30">
 			<div class="blog-post single-post">
 
-				<img class="post-img" src="images/blog-post-02.jpg" alt="">
+				<img class="post-img" src="{{{post.image}}}=s1024" alt="Vertex 360 | {{post.title}}">
 				<div class="post-content">
-					<h3>The 50 Greatest Street Arts In London</h3>
-
+					<h3>{{post.title}}</h3>
 					<ul class="post-meta">
-						<li>August 22, 2017</li>
+						<li>{{post.dateString}}</li>
 						<li><a href="#">Tips</a></li>
 						<li><a href="#">5 Comments</a></li>
 					</ul>
-
-					<p>Nam nisl lacus, dignissim ac tristique ut, scelerisque eu massa. Vestibulum ligula nunc, rutrum in malesuada vitae, tempus sed augue. Curabitur quis lectus quis augue dapibus facilisis. Vivamus tincidunt orci est, in vehicula nisi eleifend ut. Vestibulum sagittis varius orci vitae.</p>
-
-					<div class="post-quote">
-						<span class="icon"></span>
-						<blockquote>
-							Mauris aliquet ultricies ante, non faucibus ante gravida sed. Sed ultrices pellentesque purus, vulputate volutpat ipsum hendrerit sed neque sed sapien rutrum.
-						</blockquote>
-					</div>
-
-					<p>In ut odio libero, at vulputate urna. Nulla tristique mi a massa convallis cursus. Nulla eu mi magna. Etiam suscipit commodo gravida. Cras suscipit, quam vitae adipiscing faucibus, risus nibh laoreet odio, a porttitor metus eros ut enim. Morbi augue velit, tempus mattis dignissim nec, porta sed risus. Donec eget magna eu lorem tristique pellentesque eget eu dui. Fusce lacinia tempor malesuada. Ut lacus sapien, placerat a ornare nec, elementum sit amet felis. Maecenas pretium lorem hendrerit eros sagittis fermentum.</p>
-					<p>Phasellus enim magna, varius et commodo ut, ultricies vitae velit. Ut nulla tellus, eleifend euismod pellentesque vel, sagittis vel justo. In libero urna, venenatis sit amet ornare non, suscipit nec risus. Sed consequat justo non mauris pretium at tempor justo sodales. Quisque tincidunt laoreet malesuada. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Integer vitae ante enim. Fusce sed elit est. Suspendisse sit amet mauris in quam pretium faucibus et aliquam odio. </p>
-
-					<ul class="share-buttons margin-top-40 margin-bottom-0">
-						<li><a class="fb-share" href="#"><i class="fa fa-facebook"></i> Share</a></li>
-						<li><a class="twitter-share" href="#"><i class="fa fa-twitter"></i> Tweet</a></li>
-						<li><a class="linkedin-share" href="#"><i class="fa fa-linkedin"></i> Share</a></li>
-					</ul>
-					<div class="clearfix"></div>
-
+					{{{post.text}}}
 				</div>
 			</div>
 
 			<!-- About Author -->
 			<div class="about-author">
-				<img src="images/user-avatar.jpg" alt="" />
-				<div class="about-description">
-					<h4>Tom Perrin</h4>
-					<a href="#">tom@example.com</a>
-					<p>Nullam ultricies, velit ut varius molestie, ante metus condimentum nisi, dignissim facilisis turpis ex in libero. Sed porta ante tortor, a pulvinar mi facilisis nec. Proin finibus dolor ac convallis congue.</p>
+				<img src="{{{post.author.image}}}=s260-c" alt="Vertex 360 | {{post.author.firstName}} {{post.author.lastName}}" />
+				<div class="about-description" style="min-height:120px">
+					<h4>{{post.author.firstName}} {{post.author.lastName}}</h4>
+					<a href="#">{{post.author.username}}</a>
+					<p>{{{post.author.bio}}}</p>
 				</div>
 			</div>
 
