fetch recent posts for sidebar

--- a/views/post.mustache
+++ b/views/post.mustache
@@ -10,162 +10,154 @@
   <div class="clearfix"></div>
   <div id="titlebar" class="gradient padding-top-120"></div>
 
-<div class="container">
-	<div class="blog-page">
-	<div class="row">
+  <div class="container">
+  	<div class="blog-page">
+  	<div class="row">
 
-		<div class="col-lg-9 col-md-8 padding-right-30">
-			<div class="blog-post single-post">
+  		<div class="col-lg-9 col-md-8 padding-right-30">
+  			<div class="blog-post single-post">
 
-				<img class="post-img" src="{{{post.image}}}=s1024" alt="Vertex 360 | {{post.title}}">
-				<div class="post-content">
-					<h3>{{post.title}}</h3>
-					<ul class="post-meta">
-						<li>{{post.dateString}}</li>
-						<li><a href="#">Tips</a></li>
-						<li><a href="#">5 Comments</a></li>
-					</ul>
-					{{{post.text}}}
-				</div>
-			</div>
+  				<img class="post-img" src="{{{post.image}}}=s1024" alt="Vertex 360 | {{post.title}}">
+  				<div class="post-content">
+  					<h3>{{post.title}}</h3>
+  					<ul class="post-meta">
+  						<li>{{post.dateString}}</li>
+  						<li><a href="#">Tips</a></li>
+  						<li><a href="#">5 Comments</a></li>
+  					</ul>
+  					{{{post.text}}}
+  				</div>
+  			</div>
 
-			<!-- About Author -->
-			<div class="about-author">
-				<img src="{{{post.author.image}}}=s260-c" alt="Vertex 360 | {{post.author.firstName}} {{post.author.lastName}}" />
-				<div class="about-description" style="min-height:120px">
-					<h4>{{post.author.firstName}} {{post.author.lastName}}</h4>
-					<a href="#">{{post.author.username}}</a>
-					<p>{{{post.author.bio}}}</p>
-				</div>
-			</div>
-
-
-			<!-- Related Posts -->
-			<div class="clearfix"></div>
-			<h4 class="headline margin-top-25">Related Posts</h4>
-			<div class="row">
-
-				<!-- Blog Post Item -->
-				<div class="col-md-6">
-					<a href="#" class="blog-compact-item-container">
-						<div class="blog-compact-item">
-							<img src="images/blog-compact-post-01.jpg" alt="">
-							<span class="blog-item-tag">Tips</span>
-							<div class="blog-compact-item-content">
-								<ul class="blog-post-tags">
-									<li>22 August 2017</li>
-								</ul>
-								<h3>Hotels for All Budgets</h3>
-								<p>Sed sed tristique nibh iam porta volutpat finibus. Donec in aliquet urneget mattis lorem. Pellentesque pellentesque.</p>
-							</div>
-						</div>
-					</a>
-				</div>
-				<!-- Blog post Item / End -->
-
-				<!-- Blog Post Item -->
-				<div class="col-md-6">
-					<a href="#" class="blog-compact-item-container">
-						<div class="blog-compact-item">
-							<img src="images/blog-compact-post-03.jpg" alt="">
-							<span class="blog-item-tag">Tips</span>
-							<div class="blog-compact-item-content">
-								<ul class="blog-post-tags">
-									<li>10 August 2017</li>
-								</ul>
-								<h3>The Best Cofee Shops In Sydney Neighborhoods</h3>
-								<p>Sed sed tristique nibh iam porta volutpat finibus. Donec in aliquet urneget mattis lorem. Pellentesque pellentesque.</p>
-							</div>
-						</div>
-					</a>
-				</div>
-				<!-- Blog post Item / End -->
-
-			</div>
+  			<!-- About Author -->
+  			<div class="about-author">
+  				<img src="{{{post.author.image}}}=s260-c" alt="Vertex 360 | {{post.author.firstName}} {{post.author.lastName}}" />
+  				<div class="about-description" style="min-height:120px">
+  					<h4>{{post.author.firstName}} {{post.author.lastName}}</h4>
+  					<a href="#">{{post.author.username}}</a>
+  					<p>{{{post.author.bio}}}</p>
+  				</div>
+  			</div>
 
 
-			<div class="margin-top-50"></div>
-	</div>
+  			<!-- Related Posts -->
+  			<div class="clearfix"></div>
+  			<h4 class="headline margin-top-25">Related Posts</h4>
+  			<div class="row">
+
+  				<!-- Blog Post Item -->
+  				<div class="col-md-6">
+  					<a href="#" class="blog-compact-item-container">
+  						<div class="blog-compact-item">
+  							<img src="images/blog-compact-post-01.jpg" alt="">
+  							<span class="blog-item-tag">Tips</span>
+  							<div class="blog-compact-item-content">
+  								<ul class="blog-post-tags">
+  									<li>22 August 2017</li>
+  								</ul>
+  								<h3>Hotels for All Budgets</h3>
+  								<p>Sed sed tristique nibh iam porta volutpat finibus. Donec in aliquet urneget mattis lorem. Pellentesque pellentesque.</p>
+  							</div>
+  						</div>
+  					</a>
+  				</div>
+  				<!-- Blog post Item / End -->
+
+  				<!-- Blog Post Item -->
+  				<div class="col-md-6">
+  					<a href="#" class="blog-compact-item-container">
+  						<div class="blog-compact-item">
+  							<img src="images/blog-compact-post-03.jpg" alt="">
+  							<span class="blog-item-tag">Tips</span>
+  							<div class="blog-compact-item-content">
+  								<ul class="blog-post-tags">
+  									<li>10 August 2017</li>
+  								</ul>
+  								<h3>The Best Cofee Shops In Sydney Neighborhoods</h3>
+  								<p>Sed sed tristique nibh iam porta volutpat finibus. Donec in aliquet urneget mattis lorem. Pellentesque pellentesque.</p>
+  							</div>
+  						</div>
+  					</a>
+  				</div>
+  				<!-- Blog post Item / End -->
+
+  			</div>
 
 
-	<!-- Widgets -->
-	<div class="col-lg-3 col-md-4">
-		<div class="sidebar right">
-
-			<!-- Widget -->
-			<div class="widget margin-top-40">
-
-				<h3>Recent Posts</h3>
-				<ul class="widget-tabs">
-
-					<!-- Post #1 -->
-					<li>
-						<div class="widget-content">
-								<div class="widget-thumb">
-								<a href="pages-blog-post.html"><img src="images/blog-widget-03.jpg" alt=""></a>
-							</div>
-
-							<div class="widget-text">
-								<h5><a href="pages-blog-post.html">Hotels for All Budgets </a></h5>
-								<span>October 26, 2016</span>
-							</div>
-							<div class="clearfix"></div>
-						</div>
-					</li>
-
-					<!-- Post #2 -->
-					<li>
-						<div class="widget-content">
-							<div class="widget-thumb">
-								<a href="pages-blog-post.html"><img src="images/blog-widget-02.jpg" alt=""></a>
-							</div>
-
-							<div class="widget-text">
-								<h5><a href="pages-blog-post.html">The 50 Greatest Street Arts In London</a></h5>
-								<span>November 9, 2016</span>
-							</div>
-							<div class="clearfix"></div>
-						</div>
-					</li>
-
-					<!-- Post #3 -->
-					<li>
-						<div class="widget-content">
-							<div class="widget-thumb">
-								<a href="pages-blog-post.html"><img src="images/blog-widget-01.jpg" alt=""></a>
-							</div>
-
-							<div class="widget-text">
-								<h5><a href="pages-blog-post.html">The Best Cofee Shops In Sydney Neighborhoods</a></h5>
-								<span>November 12, 2016</span>
-							</div>
-							<div class="clearfix"></div>
-						</div>
-					</li>
-
-				</ul>
-
-			</div>
-			<!-- Widget / End-->
+  			<div class="margin-top-50"></div>
+  	</div>
 
 
-		</div>
-	</div>
-	</div>
-	<!-- Sidebar / End -->
+  	<!-- Widgets -->
+  	<div class="col-lg-3 col-md-4">
+  		<div class="sidebar right">
 
+  			<!-- Widget -->
+  			<div class="widget margin-top-40">
+  				<h3>Recent Posts</h3>
+  				<ul id="recent-posts" class="widget-tabs"></ul>
+  			</div>
+  			<!-- Widget / End-->
 
-</div>
-</div>
+  		</div>
+  	</div>
+  	</div>
+  	<!-- Sidebar / End -->
 
-{{>footer}}
+  </div>
+  </div>
 
-
+  {{>footer}}
 </div>
 <!-- Wrapper / End -->
 
+<script type="text/template" id="tpl-post-preview">
+  <li>
+    <div class="widget-content">
+        <div class="widget-thumb">
+        <a href="#"><img src="<%{image}%>=s120-c" alt="Vertex 360"></a>
+      </div>
+
+      <div class="widget-text">
+        <h5><a href="#"><% title %></a></h5>
+        <span><% dateString %></span>
+      </div>
+      <div class="clearfix"></div>
+    </div>
+  </li>
+</script>
+
+
 <script type="text/javascript">window.__PRELOADED__ = {{{preloaded}}}</script>
 <script type="text/javascript" src="{{{cdn}}}/dist/js/vendor.min.js"></script>
+<script>
+  (function(){
+    Mustache.tags = ["<%", "%>"] // change delimiter so it doesn't conflict server side
+    var data = window.__PRELOADED__
 
+    $.ajax({
+      url: '/api/post?limit=5',
+      type: 'GET',
+      data: null,
+      success: function(response){
+        if (response.confirmation != 'success'){
+          return
+        }
+
+        var posts = response.results
+        var tpl = $('#tpl-post-preview').html()
+        var postsHtml = ''
+        posts.forEach(function(post){
+          postsHtml += Mustache.render(tpl, post)
+        })
+
+        $('#recent-posts').html(postsHtml)
+      },
+      error: function(){
+
+      }
+    })
+  })()
+</script>
 </body>
 </html>
