--- a/views/post.mustache
+++ b/views/post.mustache
@@ -1,6 +1,13 @@
 <!DOCTYPE html>
 <head>
   {{>head}}
+  <meta property="og:title" content="Vertex 360 | {{post.title}}" />
+	<meta property="og:type" content="article" />
+	<meta property="og:url" content="https://www.vertex360.co/post/{{post.slug}}" />
+	<meta property="og:image" content="{{{post.image}}}=s260-c" />
+	<meta property="og:image:width" content="260px" />
+	<meta property="og:image:height" content="260px" />
+	<meta property="og:description" content="{{post.preview}}" />
 </head>
 
 <body>
