check for preloaded post first

--- a/views/submitpost.mustache
+++ b/views/submitpost.mustache
@@ -71,7 +71,7 @@
     (function(){
       var data = window.__PRELOADED__
       var turbo = Turbo({site_id:'5c244564231ff10015a113ea'})
-      var post = {title:'', text:'', image:''}
+      var post = data.post || {title:'', text:'', image:''}
       // console.log('BASE_URL == '+window.location.origin)
 
       var wysiwyg = 'https://wysiwyg-hcboqn.turbo360-vertex.com'
