capitalize author name

--- a/views/post.mustache
+++ b/views/post.mustache
@@ -62,7 +62,7 @@
           </a>
   				<div class="about-description" style="min-height:120px">
             <a href="/profile/{{post.author.slug}}">
-  					  <h4 class="margin-bottom-0">{{post.author.firstName}} {{post.author.lastName}}</h4>
+  					  <h4 class="margin-bottom-0 capitalize">{{post.author.firstName}} {{post.author.lastName}}</h4>
             </a>
   					<a href="/profile/{{post.author.slug}}">{{post.author.username}}</a>
   					<p>{{{post.author.bio}}}</p>
