--- a/views/post.mustache
+++ b/views/post.mustache
@@ -141,14 +141,9 @@
   <div class="col-lg-4 col-md-6">
     <a href="/template/<% slug %>" class="listing-item-container compact">
       <div class="listing-item">
-        <img src="<%{image}%>=s1024" alt="Vertex 360">
-        <div class="listing-item-details template-details">
-          <% profile.username %>
-          <img src="<%{profile.image}%>=s120-c" />
-        </div>
+        <img src="<%{image}%>=s1024-c" alt="Vertex 360">
         <div class="listing-item-content">
           <h3 style="line-height:22px"><% name %></h3>
-          <span><% description %></span>
         </div>
         <span class="like-icon"></span>
       </div>
