show category in template preview

--- a/views/post.mustache
+++ b/views/post.mustache
@@ -144,8 +144,8 @@
         <img src="<%{image}%>=s1024-c" alt="Vertex 360">
         <div class="listing-item-content">
           <h3 style="line-height:22px"><% name %></h3>
+          <small><% template.category %></small>
         </div>
-        <span class="like-icon"></span>
       </div>
     </a>
   </div>
