--- a/views/post.mustache
+++ b/views/post.mustache
@@ -144,7 +144,7 @@
         <img src="<%{image}%>=s1024-c" alt="Vertex 360">
         <div class="listing-item-content">
           <h3 style="line-height:22px"><% name %></h3>
-          <small><% template.category %></small>
+          <small style="color:#999;font-size:16px"><% template.category %></small>
         </div>
       </div>
     </a>
