--- a/views/post.mustache
+++ b/views/post.mustache
@@ -143,14 +143,13 @@
       <div class="listing-item">
         <img src="<%{image}%>=s1024-c" alt="Vertex 360">
         <div class="listing-item-content">
-          <h3 style="line-height:22px"><% name %></h3>
+          <h3 style="line-height:22px;text-transform:capitalize"><% name %></h3>
           <small style="color:#999;font-size:16px"><% template.category %></small>
         </div>
       </div>
     </a>
   </div>
 </script>
-
 
 <script type="text/javascript">window.__PRELOADED__ = {{{preloaded}}}</script>
 <script type="text/javascript" src="{{{cdn}}}/dist/js/vendor.min.js"></script>
